set header image on smaller screens to position fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -462,7 +462,7 @@ a:focus {
 @media (max-width: 58em) {
 
 	.main-header {
-		background: url(../img/poster.jpg) no-repeat center;
+		background: url(../img/poster.jpg) no-repeat center fixed;
 		background-size: cover;
 	}
 
